--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,9 +1,9 @@
-{%set name = "urllib3" %}
-{%set version = "1.20" %}
-{%set compress_type = "tar.gz" %}
-{%set hash_type = "sha256" %}
-{%set hash_val = "97ef2b6e2878d84c0126b9f4e608e37a951ca7848e4855a7f7f4437d5c34a72f" %}
-{%set build_num = "1" %}
+{% set name = "urllib3" %}
+{% set version = "1.21" %}
+{% set compress_type = "tar.gz" %}
+{% set hash_type = "sha256" %}
+{% set hash = "d0f08f1472754890c8b228106eb831a7a68c93565bd0818936c30bb839913647" %}
+{% set build_num %}
 
 package:
   name: {{ name|lower }}
@@ -15,7 +15,7 @@ source:
   {{ hash_type }}: {{ hash_val }}
 
 build:
-  number: {{ build_num }}
+  number: {{ build }}
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
@@ -25,21 +25,28 @@ requirements:
 
   run:
     - python
+    - pyopenssl >=0.14
+    - cryptography >=1.3.4
+    - idna >=2.0.0
+    - certifi
+    - ipaddress
+    - pysocks >=1.5.6,<2.0,!=1.5.7
 
 test:
   imports:
     - urllib3
-    - urllib3.contrib
     - urllib3.packages
-    - urllib3.packages.backports
     - urllib3.packages.ssl_match_hostname
+    - urllib3.packages.backports
+    - urllib3.contrib
+    - urllib3.contrib._securetransport
     - urllib3.util
 
 about:
   home: https://urllib3.readthedocs.io/
+  license_file: LICENSE.txt
   license: MIT
   license_family: MIT
-  license_file: LICENSE.txt
   summary: 'HTTP library with thread-safe connection pooling, file post, and more.'
   doc_url: https://urllib3.readthedocs.io/
   dev_url: https://github.com/shazow/urllib3
