--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,28 +1,21 @@
-{% set name = "urllib3" %}
 {% set version = "1.23" %}
-{% set compress_type = "tar.gz" %}
-{% set hash_type = "sha256" %}
-{% set hash_val = "a68ac5e15e76e7e5dd2b8f94007233e01effe3e50e8daddf69acfd81cb686baf" %}
-{% set build_num = "1" %}
 
 package:
-  name: {{ name|lower }}
+  name: urllib3
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.{{ compress_type }}
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ compress_type }}
-  {{ hash_type }}: {{ hash_val }}
+  url: https://pypi.io/packages/source/u/urllib3/urllib3-{{ version }}.tar.gz
+  sha256: a68ac5e15e76e7e5dd2b8f94007233e01effe3e50e8daddf69acfd81cb686baf
 
 build:
-  number: {{ build_num }}
-  script: python -m pip install --no-deps --ignore-installed .
+  number: 1
+  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
 
 requirements:
   host:
     - python
     - pip
-
   run:
     - python
     # secure
