--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
 
 build:
   number: 0
-  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
+  script: "{{ PYTHON }} -m pip install . --no-deps -vv"
 
 requirements:
   host:
@@ -25,6 +25,7 @@ requirements:
     - certifi
     - ipaddress  # [py<=33]
     - pysocks >=1.5.6,<2.0,!=1.5.7
+    - brotlipy >=0.6.0
 
 test:
   imports:
