--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,21 +10,25 @@ source:
 
 build:
   number: 0
-  script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
+  noarch: python
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python
+    - python <4.0
     - pip
   run:
-    - python
-    # secure
+    - python <4.0
+    # optional deps [secure]
     - pyopenssl >=0.14
     - cryptography >=1.3.4
     - idna >=2.0.0
     - certifi
-    - ipaddress  # [py<=33]
+    # optional deps [socks]
     - pysocks >=1.5.6,<2.0,!=1.5.7
+    # optional deps [brotli]
+    - brotlipy >=0.6.0
+
 
 test:
   imports:
@@ -34,6 +38,10 @@ test:
     - urllib3.packages.backports
     - urllib3.packages.ssl_match_hostname
     - urllib3.util
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: https://urllib3.readthedocs.io/
