--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,21 +9,21 @@ source:
   sha256: 2393a695cd12afedd0dcb26fe5d50d0cf248e5a66f75dbd89a3d4eb333a61af4
 
 build:
-  number: 0
-  script: "{{ PYTHON }} -m pip install . --no-deps -vv"
+  number: 1
+  noarch: python
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python
+    - python <4.0
     - pip
   run:
-    - python
+    - python <4.0
     # secure
     - pyopenssl >=0.14
     - cryptography >=1.3.4
     - idna >=2.0.0
     - certifi
-    - ipaddress  # [py<=33]
     - pysocks >=1.5.6,<2.0,!=1.5.7
 
 test:
@@ -34,6 +34,10 @@ test:
     - urllib3.packages.backports
     - urllib3.packages.ssl_match_hostname
     - urllib3.util
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: https://urllib3.readthedocs.io/
