--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,11 +1,13 @@
+{% set name = "urllib3" %}
 {% set version = "1.26.8" %}
 
+
 package:
-  name: urllib3
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/u/urllib3/urllib3-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/urllib3-{{ version }}.tar.gz
   sha256: 0e7c33d9a63e7ddfcb86780aac87befc2fbddf46c58dbb487e0855f7ceec283c
 
 build:
@@ -15,10 +17,10 @@ build:
 
 requirements:
   host:
-    - python <4.0
     - pip
+    - python >=3.6,<4.0
   run:
-    - python <4.0
+    - python >=3.6,<4.0
     # optional deps [secure]
     - pyopenssl >=0.14
     - cryptography >=1.3.4
