--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,19 +17,21 @@ build:
 
 requirements:
   host:
+    - python >=3.7
+    - hatchling >=1.6.0,<2
     - pip
-    - python <4.0
   run:
-    - python <4.0
+    - python >=3.7
     # optional deps [secure]
-    - pyopenssl >=0.14
-    - cryptography >=1.3.4
+    - pyopenssl >=17.1.0
+    - cryptography >=1.9
     - idna >=2.0.0
     - certifi
+    - urllib3-secure-extra
     # optional deps [socks]
     - pysocks >=1.5.6,<2.0,!=1.5.7
     # optional deps [brotli]
-    - brotlipy >=0.6.0
+    - brotlipy >=1.0.9
 
 
 test:
@@ -57,3 +59,4 @@ extra:
   recipe-maintainers:
     - shazow
     - sethmlarson
+    - ocefpaf
