--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,21 +11,24 @@ source:
   sha256: dd505485549a7a552833da5e6063639d0d177c04f23bc3864e41e5dc5f612168
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.8
     - hatchling >=1.6.0,<2
+    - hatch-vcs ==0.0.4
     - pip
   run:
-    - python >=3.7
+    - python >=3.8
     # optional deps [socks]
     - pysocks >=1.5.6,<2.0,!=1.5.7
     # optional deps [brotli]
     - brotli-python >=1.0.9
+    # optional deps [h2]
+    - h2 >=4,<5
 
 
 test:
