--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,8 @@ build:
 requirements:
   host:
     - python >=3.8
+    - hatchling >=1.6.0,<2
+    - hatch-vcs ==0.0.4
     - pip
   run:
     - python >=3.8
