--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,8 @@ requirements:
     - pysocks >=1.5.6,<2.0,!=1.5.7
     # optional deps [brotli]
     - brotli-python >=1.0.9
+    # optional deps [zstandard]
+    - zstandard >=0.18.0
     # optional deps [h2]
     - h2 >=4,<5
 
