--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,12 +13,13 @@ source:
 build:
   number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   host:
     - python >=3.8
     - hatchling >=1.6.0,<2
+    - hatch-vcs ==0.4.0
     - pip
   run:
     - python >=3.8
