--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "urllib3" %}
-{% set version = "1.26.19" %}
+{% set version = "1.26.20" %}
 
 
 package:
@@ -17,11 +17,11 @@ build:
 
 requirements:
   host:
-    - python >=3.7
+    - python {{ python_min }}
     - hatchling >=1.6.0,<2
     - pip
   run:
-    - python >=3.7
+    - python >={{ python_min }}
     # optional deps [socks]
     - pysocks >=1.5.6,<2.0,!=1.5.7
     # optional deps [brotli]
@@ -37,6 +37,7 @@ test:
     - pip check
   requires:
     - pip
+    - python {{ python_min }}
 
 about:
   home: https://urllib3.readthedocs.io/
@@ -52,3 +53,4 @@ extra:
     - shazow
     - sethmlarson
     - ocefpaf
+    - xhochy
