--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -36,6 +36,7 @@ requirements:
 
 tests:
   - python:
+      python_version: ${{ python_min }}.*
       imports:
         - urllib3
         - urllib3.contrib
