--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,4 +1,5 @@
 conda_build_tool: rattler-build
+conda_install_tool: pixi
 
 provider: {linux_aarch64: azure, linux_ppc64le: azure, win: azure}
 bot:
