--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,17 +18,18 @@ build:
 requirements:
   host:
     - python {{ python_min }}
-    - hatchling >=1.6.0,<2
-    - hatch-vcs ==0.4.0
+    - hatchling >=1.27.0,<2
+    - hatch-vcs >=0.4.0,<0.6.0
+    - setuptools_scm >=8,<10
     - pip
   run:
     - python >={{ python_min }}
     # optional deps [socks]
     - pysocks >=1.5.6,<2.0,!=1.5.7
     # optional deps [brotli]
-    - brotli-python >=1.0.9
-    # optional deps [zstandard]
-    - zstandard >=0.18.0
+    - brotli-python >=1.2.0
+    # optional deps [backports.zstd]
+    - backports.zstd >=1.0.0
     # optional deps [h2]
     - h2 >=4,<5
 
@@ -51,7 +52,7 @@ about:
   license_file: LICENSE.txt
   summary: HTTP library with thread-safe connection pooling, file post, and more.
   doc_url: https://urllib3.readthedocs.io/
-  dev_url: https://github.com/shazow/urllib3
+  dev_url: https://github.com/urllib3/urllib3
 
 extra:
   recipe-maintainers:
